--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -8,7 +8,7 @@
   </h3>
   <p *ngIf="product.description">Description: {{ product.description }}</p>
   <button type="button" (click)="share()">Share</button>
-  <app-product-alerts [product]="product">
+  <app-product-alerts [product]="product" (notify)="onNotify()">
   </app-product-alerts>
 </div>
 
